# codex-orch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: assistant-role-control-plane.md  controller-runtime.md  releasing.md  spec.md
examples/backlog_drain_program/: README.md  project.yaml
examples/backlog_drain_program/inputs/: repo_workspace.txt
examples/backlog_drain_program/prompts/: drain_gate.md  drain_summary.md  process_item.md  scan_and_prioritize.md
examples/backlog_drain_program/schemas/: process_result.json  scan_result.json
examples/backlog_drain_program/tasks/: drain_gate.yaml  drain_summary.yaml  process_item.yaml  scan_and_prioritize.yaml
examples/quality_convergence_program/: README.md  project.yaml
examples/quality_convergence_program/inputs/: acceptance_criteria.md  feature_brief.md  repo_workspace.txt
examples/quality_convergence_program/prompts/: acceptance_gate.md  baseline_run.md  publish_summary.md  quality_attempt.md  (+3 more)
examples/research_program/: project.yaml
src/codex_orch/: assistant_docs.py  assistant_operating_model.md  cli.py  compose_refs.py  input_values.py  prompt_context.py  schema_utils.py  task_pool.py  templates_init.py
tests/: conftest.py  helpers.py  test_api.py  test_assistant_cli.py  test_assistant_codex_cli.py  test_assistant_routing.py  test_assistant_worker.py  test_codex_exec_live.py  test_codex_exec_runner.py  test_manual_gate_api.py  test_manual_gate_cli.py  test_manual_gate_service.py  test_quality_convergence_example.py  test_run_service.py  test_task_pool.py
(+86 files in other folders)
