[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-orch"
version = "0.2.1"
description = "File-backed task orchestrator for Codex CLI workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "prefect>=3.6.22",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]

[project.scripts]
codex-orch = "codex_orch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_orch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
